jlink commands updated